--- a/src/index.css
+++ b/src/index.css
@@ -97,8 +97,8 @@ body {
   position: fixed;
   bottom: 0;
   width: 50%;
-  background-color: #007bff;
-  color: #fff;
+  /* background-color: #007bff;
+  color: #fff; */
   /* padding: 10px; */
   text-align: center;
   font-size: 18px;
